# glsl-parser

./: .build.yml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
docs/plans/: no_std.md  no_std_migration.md
glsl/: Cargo.toml  LICENSE
glsl/src/: lib.rs  parse_benches.rs  parse_tests.rs  parser.rs  parsers.rs  syntax.rs  visitor.rs
glsl/src/parsers/: nom_helpers.rs
glsl/src/transpiler/: glsl.rs  spirv.rs
glsl/tests/: left_associativity.rs
