[package]
name = "glsl"
version = "7.0.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "A GLSL450/GLSL460 parser."
keywords = ["GLSL", "OpenGL", "SPIR-V", "parser"]
categories = ["parsing", "rendering"]
homepage = "https://github.com/phaazon/glsl"
repository = "https://github.com/phaazon/glsl"
documentation = "https://docs.rs/glsl"
readme = "README.md"

edition = "2018"
rust-version = "1.73"

[features]
default = ["std"]
std = ["nom/std", "nom_locate/std"]
spirv = ["shaderc"]
bench = []

[dependencies]
nom = { version = "7", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.2", default-features = false, features = ["alloc"] }
shaderc = { version = ">=0.6, <0.9", optional = true }
